# minusAgent

./: .gitignore  Cargo.toml  README.md  config.json
doc/: cli.md  context.md  core.md  cot.md  llm.md  prompt.md  utils.md
docs/: agent-loop.md  config.md  harness.md  session.md  skill.md  transport.md
src/: lib.rs  main.rs
src/agent/: agent.rs  llm.rs  mod.rs
src/cli/: cli.rs  mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/core/: agent.rs  config.rs  context.rs  guard.rs  harness.rs  llm.rs  mod.rs  node.rs  prompt.rs  router.rs  signal.rs  skill.rs
src/cot/: mod.rs
src/feature/: agent.rs  cot.rs  harness.rs  llm.rs  mod.rs  skill.rs  utils.rs
src/feature/skills/plan/: SKILL.md
src/feature/skills/thinking/: SKILL.md
src/instructions/: system_prompt.md
src/instructions/skills/shell/: SKILL.md
src/interactive/: mod.rs
src/interface/: cli.rs  interactive.rs  mod.rs  session.rs  spinner.rs  utils.rs
src/llm/: mod.rs
src/memory/: mod.rs
src/prompt/: mod.rs  prompt.rs  system_prompt.md
src/session/: context.rs  harness.rs  mod.rs  session.rs
src/skill/: loader.rs  mod.rs  registry.rs
src/skills/command/: SKILL.md
src/skills/plan/: SKILL.md
src/skills/react/: SKILL.md
src/skills/thinking/: SKILL.md
src/transport/: cli.rs
src/utils/: mod.rs
