[package]
name = "minusagent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
clap = { version = "4.5.55", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "time"] }
toml = "0.8"
crossterm = "0.28"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
