[package]
name = "minusagent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
dirs = "6"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.49.0"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
