[package]
name = "minusagent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
dirs = "6"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
crossterm = "0.28"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
